Reworked completion handling.